--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "build": "tsc",
+    "start": "node build/index.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +23,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
-    "mongoose": "^6.8.1"
+    "mongoose": "^6.8.1",
+    "winston": "^3.8.2"
   }
 }
