--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^18.11.17",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.1",
     "winston": "^3.8.2"
   }
