--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^18.11.17",
+    "@types/uuid": "^9.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
@@ -29,6 +30,7 @@
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.1",
+    "uuid": "^9.0.0",
     "winston": "^3.8.2"
   }
 }
